K8s_end_to_end/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: webapp-daemonset
  namespace: default
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: app-container
        image: nginx
        volumeMounts:
        - name: storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: my-pvc
